@@ -225,6 +225,7 @@ x^2
 [11]
 45
 1.7320508075688772935274463415058723670*I
+0
 2.2360679774997896964091736687312762354
 0
 -16.104201132412986864073866738029737749 + 6.3761042876342817490516477498551
@@ -238,4 +239,4 @@ x^2
 614357*I
 0
 4.0000000000000000000000000000000000000*I
-Total time spent: 1367
+Total time spent: 980
